--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,26 +6,48 @@
 </head>
 <body>
 
-    <h1>Welcome to My First Webpage!</h1>
+    
 
-    <p>This is my first paragraph on my very first webpage.</p>
-    <p>Here is my second paragraph, adding more content for practice.</p>
+<header>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+</header>
 
-    <h2>About This Page</h2>
+<main>
+    <article>
+        <h1>Welcome to My First Webpage!</h1>
 
-    <p>Paragraph three: explaining why I am learning HTML and web development.</p>
+        <p>This is my first paragraph.</p>
+        <p>Second paragraph with more info.</p>
 
-    <h3>Fun Fact</h3>
+        <h2>About This Page</h2>
+        <p>Third paragraph about learning HTML.</p>
 
-    <p>Paragraph four: did you know that HTML stands for HyperText Markup Language?</p>
+        <h3>Fun Fact</h3>
+        <p>Fourth paragraph: HTML stands for HyperText Markup Language.</p>
 
-    <!-- Clickable image -->
-    <a href="https://www.alxafrica.com" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-    </a>
+        <!-- Clickable image -->
+        <a href="https://www.alxafrica.com" target="_blank">
+            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+        </a>
 
-    <!-- Link to tweets page -->
-    <p>Check out my <a href="tweets.html">Tweets Page</a>!</p>
+        <!-- Link to tweets page -->
+        <p>Check out my <a href="tweets.html">Tweets Page</a>!</p>
+    </article>
+
+    <aside>
+        <p>placeholder to add comment thread later</p>
+    </aside>
+</main>
+
+<footer>
+    <p>Made by David Amoah - <a href="https://www.alxafrica.com" target="_blank">here</a></p>
+</footer>
+
+
+
 
 </body>
 </html>
