--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,8 +6,6 @@
 </head>
 <body>
 
-    
-
 <header>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -35,6 +33,41 @@
 
         <!-- Link to tweets page -->
         <p>Check out my <a href="tweets.html">Tweets Page</a>!</p>
+
+        <!-- Table of learners -->
+        <h2>Our Learners</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>John</td>
+                    <td>25</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>
+                </tr>
+                <tr>
+                    <td>Michael</td>
+                    <td>32</td>
+                    <td>Australia</td>
+                </tr>
+                <tr>
+                    <td>Sophia</td>
+                    <td>21</td>
+                    <td>UK</td>
+                </tr>
+            </tbody>
+        </table>
+
     </article>
 
     <aside>
@@ -45,9 +78,6 @@
 <footer>
     <p>Made by David Amoah - <a href="https://www.alxafrica.com" target="_blank">here</a></p>
 </footer>
-
-
-
 
 </body>
 </html>
